update footer thank you

--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
             <div class="thankyou-body container uk-light">
                 <h2 class="thankyou-title" data-aos="fade-up" data-aos-duration="2000">Thank you!</h2>
                 <p class="thankyou-des" data-aos="fade" data-aos-duration="3000">Sự hiện diện của bạn sẽ khiến hôn lễ
-                    của chúng tôi trở nên ý nghĩa hơn bao giờ hết!</p>
+                    của chúng mình trở nên ý nghĩa hơn bao giờ hết!</p>
         </section>
         <!-- END THANK YOU --><!-- END THANKYOU -->
         <script>
