--- a/index.html
+++ b/index.html
@@ -119,13 +119,9 @@
     class="mau-thiep-template mau-thiep-template-templates mau-thiep-template-xanhla mau-thiep-template-templatesxanhla-php single single-mau-thiep postid-199">
 
     <body>
-        <!-- PRELOAD -->
-        <div class="loader">
-            <div class="loader-logo">
-                <img src="" alt="">
-            </div>
-            <span class="tracking-in-expand"></span>
-        </div>
+        <div class="back screen-loading"></div>
+        <div class="heart screen-loading"></div>
+
         <!-- END PRELOAD --> <!-- BANNER -->
         <section id="banner" class="section-banner">
             <img width="320" height="394"
