--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 </head>
 
 <body
-    class="mau-thiep-template mau-thiep-template-templates mau-thiep-template-xanhla mau-thiep-template-templatesxanhla-php single single-mau-thiep postid-199">
+    class="loading mau-thiep-template mau-thiep-template-templates mau-thiep-template-xanhla mau-thiep-template-templatesxanhla-php single single-mau-thiep postid-199">
 
     <body>
         <div class="back screen-loading"></div>
