--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Trường Phúc &amp; Hồng Hạnh Wedding site!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="https://txtien.github.io/quynhwedding0225/assets/imgs/1.jpg">
     <link rel="shortcut icon" type="image/x-icon" href="https://txtien.github.io/quynhwedding0225/assets/imgs/favicon.png">
     <style>
         img:is([sizes="auto" i], [sizes^="auto," i]) {
@@ -68,7 +69,7 @@
     <script src="https://txtien.github.io/quynhwedding0225/assets/js/jquery.min.js" id="jquery-core-js"></script>
     <script src="https://txtien.github.io/quynhwedding0225/assets/js/jquery-migrate.min.js" id="jquery-migrate-js"></script>
     <script src="https://txtien.github.io/quynhwedding0225/assets/js/jquery1.min.js" id="Jquery-js"></script>
-    <link data-minify="1" rel="stylesheet" href="https://txtien.github.io/quynhwedding0225/assets/css/xanhla.css">
+    <link data-minify="1" rel="stylesheet" href="./assets/css/xanhla.css">
     <script>
     // Add this lazy loading script
     document.addEventListener("DOMContentLoaded", function() {
@@ -181,7 +182,7 @@
             <div class="time-line container">
                 <div class="section-heading">
                     <h2 class="section-title">
-                        2019 - 2024
+                        ♡  2019 - 2024 ♡ 
                     </h2>
                 </div>
 
@@ -198,14 +199,15 @@
                     <h2 class="section-title">
                         SAY "YES"
                     </h2>
-                    <p class="subtitle"> 18.10.2024 </p>
+                    at
+                    <p style="margin-top: 10px;" class="subtitle"> 18.10.2024 </p>
                 </div>
                 <div class="timeline-list">
                     <div class="timeline-item" data-aos="fade-up" data-aos-duration="1000">
                      
                         <video width="600" height="240" controls>
                             <source src="./assets/media/mp41.mp4" type="video/mp4">
-                            <source src="./assets/video/6301199030985.mp4" type="video/ogg">
+                            <source src="./assets/media/mp41.mp4"  type="video/ogg">
                             Your browser does not support the video tag.
                         </video>
                     </div>
@@ -322,8 +324,6 @@
             style="background-image:url(https://txtien.github.io/quynhwedding0225/assets/imgs/3.jpg)">
             <div class="countdown container">
                 <p class="subtitle">CÙNG ĐẾM NGƯỢC THỜI GIAN</p>
-                <h2 class="section-title">
-                    SAVE THE DATE </h2>
                 <svg class="heartbeat" width="64" height="64" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path fill="red"
                         d="M16.5 13.287c-2.475-2.716-5.5-.712-5.5 2.112c0 2.56 1.814 4.035 3.358 5.292l.044.036l.427.35c.571.475 1.121.923 1.671.923s1.1-.448 1.671-.923C19.789 19.73 22 18.224 22 15.399c0-.927-.326-1.767-.853-2.38c-1.075-1.251-2.985-1.556-4.647.268Z" />
@@ -354,13 +354,13 @@
         <!-- INVITATION -->
         <section id="invitation" class="section-invitation">
             <div class="container">
-                <div class="section-heading">
-                    <h2 class="section-title">
-                        <p>Hôn lễ</p>
-                    </h2>
-                </div>
                 <div class="invitation">
                     <div class="invitation-container">
+                        <div class="section-heading">
+                            <h2 class="section-title">
+                               Hôn lễ nhà gái được diễn ra tại
+                            </h2>
+                        </div>
                         <div class="invitation-card"> <img width="1266" height="1900"
                             src="https://txtien.github.io/quynhwedding0225/assets/imgs/honle.jpg" alt="Công viên Tân Thành" />
                             <h3 class="card-title">Công viên Tân Thành</h3>
@@ -376,7 +376,7 @@
                                     <div class="invi_group_time">
 
                                         <span class="invi_date_text">
-                                            Thứ sáu </span>
+                                            Thứ Sáu </span>
                                         <span class="invi_date_number">
                                             <p class="invi_date">21</p> /
                                             <p class="invi_month">02</p>
@@ -399,6 +399,11 @@
                             </div>
 
 
+                        </div>
+                        <div class="section-heading">
+                            <h2 class="section-title">
+                               Hôn lễ nhà trai được diễn ra tại
+                            </h2>
                         </div>
                         <div class="invitation-card"> 
                             <img width="1266" height="1900"
@@ -581,7 +586,7 @@
             <div class="thankyou-body container uk-light">
                 <h2 class="thankyou-title" data-aos="fade-up" data-aos-duration="2000">Thank you!</h2>
                 <p class="thankyou-des" data-aos="fade" data-aos-duration="3000">Sự hiện diện của bạn sẽ khiến hôn lễ
-                    của chúng tôi trở nên ý nghĩa hơn bao giờ hết!</p>
+                    của chúng mình trở nên ý nghĩa hơn bao giờ hết!</p>
         </section>
         <!-- END THANK YOU --><!-- END THANKYOU -->
         <script>
@@ -603,6 +608,11 @@
             <i class='ri-volume-mute-fill'></i>
         </button>
         <!-- END FOOTER -->
+
+
+        <script>
+
+        </script>
 
         <script id="rocket-browser-checker-js-after">
             "use strict"; var _createClass = function () { function defineProperties(target, props) { for (var i = 0; i < props.length; i++) { var descriptor = props[i]; descriptor.enumerable = descriptor.enumerable || !1, descriptor.configurable = !0, "value" in descriptor && (descriptor.writable = !0), Object.defineProperty(target, descriptor.key, descriptor) } } return function (Constructor, protoProps, staticProps) { return protoProps && defineProperties(Constructor.prototype, protoProps), staticProps && defineProperties(Constructor, staticProps), Constructor } }(); function _classCallCheck(instance, Constructor) { if (!(instance instanceof Constructor)) throw new TypeError("Cannot call a class as a function") } var RocketBrowserCompatibilityChecker = function () { function RocketBrowserCompatibilityChecker(options) { _classCallCheck(this, RocketBrowserCompatibilityChecker), this.passiveSupported = !1, this._checkPassiveOption(this), this.options = !!this.passiveSupported && options } return _createClass(RocketBrowserCompatibilityChecker, [{ key: "_checkPassiveOption", value: function (self) { try { var options = { get passive() { return !(self.passiveSupported = !0) } }; window.addEventListener("test", null, options), window.removeEventListener("test", null, options) } catch (err) { self.passiveSupported = !1 } } }, { key: "initRequestIdleCallback", value: function () { !1 in window && (window.requestIdleCallback = function (cb) { var start = Date.now(); return setTimeout(function () { cb({ didTimeout: !1, timeRemaining: function () { return Math.max(0, 50 - (Date.now() - start)) } }) }, 1) }), !1 in window && (window.cancelIdleCallback = function (id) { return clearTimeout(id) }) } }, { key: "isDataSaverModeOn", value: function () { return "connection" in navigator && !0 === navigator.connection.saveData } }, { key: "supportsLinkPrefetch", value: function () { var elem = document.createElement("link"); return elem.relList && elem.relList.supports && elem.relList.supports("prefetch") && window.IntersectionObserver && "isIntersecting" in IntersectionObserverEntry.prototype } }, { key: "isSlowConnection", value: function () { return "connection" in navigator && "effectiveType" in navigator.connection && ("2g" === navigator.connection.effectiveType || "slow-2g" === navigator.connection.effectiveType) } }]), RocketBrowserCompatibilityChecker }();
