--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
                     <div class="timeline-item" data-aos="fade-up" data-aos-duration="1000">
                      
                         <video width="600" height="240" controls>
-                            <source src="./assets/media/mp41.mp4" type="video/mp4">
-                            <source src="./assets/media/mp41.mp4"  type="video/ogg">
+                            <source src="https://devportal.thangloigroup.vn/assets/media/mp41.mp4" type="video/mp4">
+                            <source src="https://devportal.thangloigroup.vn/assets/media/mp41.mp4"  type="video/ogg">
                             Your browser does not support the video tag.
                         </video>
                     </div>
