--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
     <link data-minify="1" rel='stylesheet' id='animation-css' href='https://devportal.thangloigroup.vn/assets/css/animation.css' media='all' />
     <link data-minify="1" rel='stylesheet' id='aos style-css' href='https://devportal.thangloigroup.vn/assets/css/aos.css' media='all' />
     <link data-minify="1" rel='stylesheet' id='footer style-css' href='https://devportal.thangloigroup.vn/assets/css/footer.css' media='all' />
-    <link data-minify="1" rel='stylesheet' id='wedding style-css' href='https://devportal.thangloigroup.vn/assets/css/wedding.css' media='all' />
+    <link data-minify="1" rel='stylesheet' id='wedding style-css' href='./assets/css/wedding.css' media='all' />
     <script src="https://devportal.thangloigroup.vn/assets/js/jquery.min.js" id="jquery-core-js"></script>
     <script src="https://devportal.thangloigroup.vn/assets/js/jquery-migrate.min.js" id="jquery-migrate-js"></script>
     <script src="https://devportal.thangloigroup.vn/assets/js/jquery1.min.js" id="Jquery-js"></script>
-    <link data-minify="1" rel="stylesheet" href="https://devportal.thangloigroup.vn/assets/css/xanhla.css">
+    <link data-minify="1" rel="stylesheet" href="./assets/css/xanhla.css">
     <script>
     // Add this lazy loading script
     document.addEventListener("DOMContentLoaded", function() {
@@ -472,7 +472,7 @@
                 </h2>
                 <div class="list_message">
                 </div>
-                <h2 class="section-title">
+                <h2 class="section-title1">
                    Và chắc chắn, không thể thiếu cậu...
                 </h2>
                 <div class="form-message">
@@ -646,7 +646,6 @@
         <script data-minify="1" src="https://devportal.thangloigroup.vn/assets/js/countdown.js" id="count-down js-js"></script>
         <script src="https://devportal.thangloigroup.vn/assets/js/comment-reply.min.js" id="comment-reply-js" async data-wp-strategy="async"></script>
 
-        <!-- Add this script right before the closing </body> tag -->
         <script>
         // Media playback coordination
         document.addEventListener("DOMContentLoaded", function() {
