--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
     <link data-minify="1" rel='stylesheet' id='animation-css' href='https://devportal.thangloigroup.vn/assets/css/animation.css' media='all' />
     <link data-minify="1" rel='stylesheet' id='aos style-css' href='https://devportal.thangloigroup.vn/assets/css/aos.css' media='all' />
     <link data-minify="1" rel='stylesheet' id='footer style-css' href='https://devportal.thangloigroup.vn/assets/css/footer.css' media='all' />
-    <link data-minify="1" rel='stylesheet' id='wedding style-css' href='./assets/css/wedding.css' media='all' />
+    <link data-minify="1" rel='stylesheet' id='wedding style-css' href='https://devportal.thangloigroup.vn/assets/css/wedding.css' media='all' />
     <script src="https://devportal.thangloigroup.vn/assets/js/jquery.min.js" id="jquery-core-js"></script>
     <script src="https://devportal.thangloigroup.vn/assets/js/jquery-migrate.min.js" id="jquery-migrate-js"></script>
     <script src="https://devportal.thangloigroup.vn/assets/js/jquery1.min.js" id="Jquery-js"></script>
-    <link data-minify="1" rel="stylesheet" href="./assets/css/xanhla.css">
+    <link data-minify="1" rel="stylesheet" href="https://devportal.thangloigroup.vn/assets/css/xanhla.css">
     <script>
     // Add this lazy loading script
     document.addEventListener("DOMContentLoaded", function() {
