--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta property="og:site_name" content="Trường Phúc &amp; Hồng Hạnh">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Trường Phúc &amp; Hồng Hạnh Wedding site!">
+    <meta property="og:title" content="Trường Phúc &amp; Hồng Hạnh Wedding">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="https://txtien.github.io/quynhwedding0225/assets/imgs/1.jpg">
     <link rel="shortcut icon" type="image/x-icon" href="https://devportal.thangloigroup.vn/assets/imgs/favicon.png">
