--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
                 </div>
                 <div class="album-item">
                     <a data-fancybox="gallery"
-                        href="./assets/imgs/album/anhngang.jpg">
-                        <img width="1267" height="1900" data-src="./assets/imgs/album/anhngang.jpg" alt="" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7">
+                        href="https://devportal.thangloigroup.vn/assets/imgs/album/anhngang.jpg">
+                        <img width="1267" height="1900" data-src="https://devportal.thangloigroup.vn/assets/imgs/album/anhngang.jpg" alt="" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7">
                     </a>
                 </div>
                 <div class="album-item">
