--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <script src="https://devportal.thangloigroup.vn/assets/js/jquery.min.js" id="jquery-core-js"></script>
     <script src="https://devportal.thangloigroup.vn/assets/js/jquery-migrate.min.js" id="jquery-migrate-js"></script>
     <script src="https://devportal.thangloigroup.vn/assets/js/jquery1.min.js" id="Jquery-js"></script>
-    <link data-minify="1" rel="stylesheet" href="https://devportal.thangloigroup.vn/assets/css/xanhla.css">
+    <link data-minify="1" rel="stylesheet" href="./assets/css/xanhla.css">
     <script>
     // Add this lazy loading script
     document.addEventListener("DOMContentLoaded", function() {
@@ -635,6 +635,12 @@
                     của chúng mình trở nên ý nghĩa hơn bao giờ hết!</p>
         </section>
         <!-- END THANK YOU --><!-- END THANKYOU -->
+        <!-- FOOTER -->
+
+        <footer id="footerr">
+            <p>Designed & developed by <a href="http://happy.id.vn" target="_blank">Q</a></p>
+        </footer>
+        <!-- END FOOTER -->
         <script>
             $(':root').css('--primary-color', '');
             $(':root').css('--secondary-color', '');
