--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <script src="https://devportal.thangloigroup.vn/assets/js/jquery.min.js" id="jquery-core-js"></script>
     <script src="https://devportal.thangloigroup.vn/assets/js/jquery-migrate.min.js" id="jquery-migrate-js"></script>
     <script src="https://devportal.thangloigroup.vn/assets/js/jquery1.min.js" id="Jquery-js"></script>
-    <link data-minify="1" rel="stylesheet" href="./assets/css/xanhla.css">
+    <link data-minify="1" rel="stylesheet" href="https://devportal.thangloigroup.vn/assets/css/xanhla.css">
     <script>
     // Add this lazy loading script
     document.addEventListener("DOMContentLoaded", function() {
