--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
         <!-- FOOTER -->
 
         <footer id="footerr">
-            <p>Designed & developed by <a href="http://happy.id.vn" target="_blank">Q</a></p>
+            <p>Designed & developed by <a href="https://ngocquynhpham.github.io/" target="_blank">Q</a></p>
         </footer>
         <!-- END FOOTER -->
         <script>
