--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
             //     }
             //     $('.list_message').html(mess_item)
             // }
-            fetch('https://comment.mateotien.com/api/comment/?wedding_code=02609fd7',
+            fetch('https://ca1677cf6785.ngrok-free.app/api/comment/?wedding_code=02609fd7',
                 {
                     method: 'GET',
                 }
@@ -586,7 +586,7 @@
                     name: name,
                     comment: mess,
                 });
-                ACTION_URL = 'https://comment.mateotien.com/api/comment/';
+                ACTION_URL = 'https://ca1677cf6785.ngrok-free.app/api/comment/';
                 fetch(ACTION_URL, {
                     method: 'post',
                     headers: {
